# GaloisCPP

./: CMakeLists.txt
cmake/: GaloisCPPConfig.cmake.in
include/: galoisfield.h  gfelement.h  modular_arith.h  polynomial_arith.h  typedefs.h
src/: galoisfield.cpp  gfelement.cpp  modular_arith.cpp  polynomial_arith.cpp  sample_app_1.cpp  sample_app_2.cpp  test_gfelement.cpp
